  + (builtins) primitive added to core.
  + (builtins) added to lib/fakevm.scm.
  + Any reference to an identifier not bound in builtins, imports is identified
    during compilation as an error.

- ?/??/????, Phase Four of the Module System, Phase Three of the Macro System
  + Added export-syntax
  + Compiler now analyzes imports for exported syntaxes.

- ?/??/????, Phase Two of the Macro System
  + Added define-macro

- ?/??/????, Phase Three of the Module System
  * Renamed the export special form to module.
  * Modified compile to analyze the source for top level export statements --
    top level defines that define identifiers that are not exported will
    not be mapped into the global namespace.
  * Made inner-defines forward looking in namespace.
  * Altered REPL to insert an export for all variables bound in the
    expression.
  * Added parent-type primitive.
  * Added direct-type primitive.
  * Fixed typo in type->string
  * Fixed error in mqo_raise that would cause an error when parsing
    environments with 0 bindings.
  * Fixed typo in compile-expr that would cause a bogus error.

- 2/14/2006, Buffered Read / Write
  * Added the buffer primitive type.
  * Added the (make-buffer size) primitive to core.
  * Added the (buffer? value) primitive to core.
  * Added the (buffer-length buffer) primitive to core.
  * Added the (write-buffer buffer string) primitive to core.
  * Added the (read-buffer buffer ?max) primitive to core.
  * Added the (buffer->string buffer) primitive to core.
  * Added the (write-buffer-byte buffer byte) primitive to core.
  * Added the (write-buffer-word buffer word) primitive to core.
  * Added the (write-buffer-quad buffer quad) primitive to core.
  * Added the (read-buffer-byte buffer) primitive to core.
  * Added the (read-buffer-word buffer) primitive to core.
  * Added the (read-buffer-quad buffer) primitive to core.
  * Altered string-port to use buffers.